basic js system for retrieving data

--- a/web/main.html
+++ b/web/main.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Music Database</title>
 </head>
 <body>
-
+<p id="placeholder">..</p>
 </body>
+<script src="app.js"></script>
 </html>
