basic search functionality

--- a/web/main.html
+++ b/web/main.html
@@ -5,7 +5,11 @@
     <title>Music Database</title>
 </head>
 <body>
-<p id="placeholder">..</p>
+<label for="album_search">album search</label>
+<input type="text" placeholder="album title" id="album_search">
+<button id="searchButton">SEARCH</button>
+<!--search results places here-->
+<p id="placeholder">results</p>
 </body>
 <script src="app.js"></script>
 </html>
