--- a/web/main.html
+++ b/web/main.html
@@ -3,13 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Music Database</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-<label for="album_search">album search</label>
-<input type="text" placeholder="album title" id="album_search">
-<button id="searchButton">SEARCH</button>
-<!--search results places here-->
-<p id="placeholder">results</p>
+<body class="bg-dark">
+<div class="container text-center text-light">
+    <div class="row">
+        <div class="col">
+            <div class="card h-100 text-bg-dark border-secondary">
+                <h5 class="card-header border-secondary">Album Search</h5>
+                <div class="card-body">
+                    <div class="row gx-0 gy-2">
+                        <div class="col-8">
+                            <input type="text" class="w-100 form-control" placeholder="album title"
+                                   id="album_search">
+                        </div>
+                        <div class="col-4">
+                            <button id="searchButton" class="btn btn-outline-primary h-auto w-auto">search</button>
+                        </div>
+                    </div>
+                    <div class="overflow-auto">
+                        <p id="placeholder" class="text-start">results</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--        <div class="col">-->
+        <!--            <h3>Top Rated Album</h3>-->
+        <!--            <p>TOP RATED ALBUM</p>-->
+        <!--        </div>-->
+        <!--        <div class="col">-->
+        <!--            <h3>Most owned medium</h3>-->
+        <!--        </div>-->
+    </div>
+</div>
 </body>
 <script src="app.js"></script>
 </html>
