styled the album search

--- a/web/main.html
+++ b/web/main.html
@@ -19,12 +19,16 @@
                             <input type="text" class="w-100 form-control" placeholder="album title"
                                    id="album_search">
                         </div>
-                        <div class="col-4">
-                            <button id="searchButton" class="btn btn-outline-primary h-auto w-auto">search</button>
+                        <div class="col-4 gx-4">
+                            <button id="searchButton" class="btn btn-outline-primary h-auto container-fluid">search
+                            </button>
                         </div>
                     </div>
-                    <div class="overflow-auto">
-                        <p id="placeholder" class="text-start">results</p>
+                    <div class="row">
+                        <!--                        overflow-auto -->
+                        <div class="overflow-auto card-text-container">
+                            <div id="placeholder" class="text-start pt-3">Results</div>
+                        </div>
                     </div>
                 </div>
             </div>
