--- a/web/main.html
+++ b/web/main.html
@@ -5,10 +5,11 @@
     <title>Music Database</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-dark">
-<div class="container text-center text-light">
+<div class="container text-center text-light pt-3">
     <div class="row">
         <div class="col">
             <div class="card h-100 text-bg-dark border-secondary">
@@ -16,7 +17,7 @@
                 <div class="card-body">
                     <div class="row gx-0 gy-2">
                         <div class="col-8">
-                            <input type="text" class="w-100 form-control" placeholder="album title"
+                            <input type="text" class="w-100 form-control" placeholder="Album Title"
                                    id="album_search">
                         </div>
                         <div class="col-4 gx-4">
@@ -25,21 +26,73 @@
                         </div>
                     </div>
                     <div class="row">
-                        <!--                        overflow-auto -->
                         <div class="overflow-auto card-text-container">
-                            <div id="placeholder" class="text-start pt-3">Results</div>
+                            <div id="placeholder" class="text-start pt-3"></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!--        <div class="col">-->
-        <!--            <h3>Top Rated Album</h3>-->
-        <!--            <p>TOP RATED ALBUM</p>-->
-        <!--        </div>-->
-        <!--        <div class="col">-->
-        <!--            <h3>Most owned medium</h3>-->
-        <!--        </div>-->
+        <div class="col">
+            <div class="card h-100 text-bg-dark border-secondary">
+                <h5 class="card-header border-secondary">Add Album</h5>
+                <div class="card-body">
+                    <div class="row">
+                        <label for="album_title-input" class="col-sm-2 col-form-label">Title</label>
+                        <div class="col-4">
+                            <input type="text" class="form-control" placeholder="Album Title"
+                                   id="album_title-input">
+                        </div>
+                        <label for="album_band_input" class="form-label col-sm-2 col-form-label">Band</label>
+                        <div class="col-4">
+                            <input type="text" class="form-control" placeholder="Band" id="album_band_input">
+                        </div>
+                    </div>
+                    <div class="row pt-3">
+                        <label for="album_band_YOR" class="form-label col-sm-2 col-form-label">Release</label>
+                        <div class="col-4">
+                            <input type="number" id="album_band_YOR" class="form-control" placeholder="Year">
+                        </div>
+                        <label for="album_star_input" class="form-label col-sm-2 col-form-label">Rating</label>
+                        <div class="col-4">
+                            <!--                            <input type="range" value="3" id="album_star_input" min="0" max="5"-->
+                            <!--                                   class="">-->
+                            <!--                            <div id="star_graphic"></div>-->
+                            <ul class="list-group list-group-horizontal-sm border border-1 border-secondary form-control bg-dark h-list"
+                                id="album_star_input">
+                                <li class="list-group-item bg-dark border-0 star" id="star-1">
+                                    <button class="bi-star-fill btn"></button>
+                                </li>
+                                <li class="list-group-item bg-dark border-0  star" id="star-2">
+                                    <button class="bi-star-fill btn"></button>
+                                </li>
+                                <li class="list-group-item bg-dark border-0 text-warning star">
+                                    <button class="bi-star-fill btn" id="star-3"></button>
+                                </li>
+                                <li class="list-group-item bg-dark border-0 text-warning star">
+                                    <button class="bi-star-fill btn" id="star-4"></button>
+                                </li>
+                                <li class="list-group-item bg-dark border-0 text-warning star">
+                                    <button class="bi-star-fill btn" id="star-5"></button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row pt-3">
+                        <label for="album_genre_input" class="col-sm-2 col-form-label">Genre</label>
+                        <div class="col-4">
+                            <input type="text" list="genres" id="album_genre_input" class="form-control"
+                                   placeholder="Genre">
+                            <datalist id="genres">
+                                <option value="hard rock"></option>
+                                <option value="metal"></option>
+                                <option value="pop"></option>
+                            </datalist>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 </body>
