star rating working better

--- a/web/main.html
+++ b/web/main.html
@@ -54,26 +54,23 @@
                             <input type="number" id="album_band_YOR" class="form-control" placeholder="Year">
                         </div>
                         <label for="album_star_input" class="form-label col-sm-2 col-form-label">Rating</label>
-                        <div class="col-4">
-                            <!--                            <input type="range" value="3" id="album_star_input" min="0" max="5"-->
-                            <!--                                   class="">-->
-                            <!--                            <div id="star_graphic"></div>-->
+                        <div class="col-4" id="star-container">
                             <ul class="list-group list-group-horizontal-sm border border-1 border-secondary form-control bg-dark h-list"
                                 id="album_star_input">
-                                <li class="list-group-item bg-dark border-0 star" id="star-1">
-                                    <button class="bi-star-fill btn"></button>
+                                <li class="list-group-item bg-dark border-0 star">
+                                    <i class="bi-star-fill" id="star-1"></i>
                                 </li>
-                                <li class="list-group-item bg-dark border-0  star" id="star-2">
-                                    <button class="bi-star-fill btn"></button>
-                                </li>
-                                <li class="list-group-item bg-dark border-0 text-warning star">
-                                    <button class="bi-star-fill btn" id="star-3"></button>
+                                <li class="list-group-item bg-dark border-0 star">
+                                    <i class="bi-star-fill" id="star-2"></i>
                                 </li>
                                 <li class="list-group-item bg-dark border-0 text-warning star">
-                                    <button class="bi-star-fill btn" id="star-4"></button>
+                                    <i class="bi-star-fill" id="star-3"></i>
                                 </li>
                                 <li class="list-group-item bg-dark border-0 text-warning star">
-                                    <button class="bi-star-fill btn" id="star-5"></button>
+                                    <i class="bi-star-fill" id="star-4"></i>
+                                </li>
+                                <li class="list-group-item bg-dark border-0 text-warning star">
+                                    <i class="bi-star-fill" id="star-5"></i>
                                 </li>
                             </ul>
                         </div>
