Got the requests working for adding an album

--- a/web/main.html
+++ b/web/main.html
@@ -38,10 +38,10 @@
                 <h5 class="card-header border-secondary">Add Album</h5>
                 <div class="card-body">
                     <div class="row">
-                        <label for="album_title-input" class="col-sm-2 col-form-label">Title</label>
+                        <label for="album_title_input" class="col-sm-2 col-form-label">Title</label>
                         <div class="col-4">
                             <input type="text" class="form-control" placeholder="Album Title"
-                                   id="album_title-input">
+                                   id="album_title_input">
                         </div>
                         <label for="album_band_input" class="form-label col-sm-2 col-form-label">Band</label>
                         <div class="col-4">
