--- a/web/main.html
+++ b/web/main.html
@@ -1,110 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Music Database</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="bg-dark">
-<div class="container text-center text-light pt-3">
-    <div class="row">
-        <div class="col">
-            <div class="card h-100 text-bg-dark border-secondary">
-                <h5 class="card-header border-secondary">Album Search</h5>
-                <div class="card-body">
-                    <div class="row gx-0 gy-2">
-                        <div class="col-8">
-                            <input type="text" class="w-100 form-control" placeholder="Album Title"
-                                   id="album_search">
+    <div class="container text-center text-light pt-3">
+        <div class="row">
+            <div class="col">
+                <div class="card h-100 text-bg-dark border-secondary">
+                    <h5 class="card-header border-secondary">Album Search</h5>
+                    <div class="card-body">
+                        <div class="row gx-0 gy-2">
+                            <div class="col-8">
+                                <input type="text" class="w-100 form-control" placeholder="Album Title"
+                                    id="album_search">
+                            </div>
+                            <div class="col-4 gx-4">
+                                <button id="searchButton" class="btn btn-outline-primary h-auto container-fluid">Search
+                                </button>
+                            </div>
                         </div>
-                        <div class="col-4 gx-4">
-                            <button id="searchButton" class="btn btn-outline-primary h-auto container-fluid">Search
-                            </button>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="overflow-auto card-text-container">
-                            <div id="placeholder" class="text-start pt-3"></div>
+                        <div class="row">
+                            <div class="overflow-auto card-text-container">
+                                <div id="placeholder" class="text-start pt-3"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card h-100 text-bg-dark border-secondary">
-                <h5 class="card-header border-secondary">Add Album</h5>
-                <div class="card-body">
-                    <div class="row">
-                        <label for="album_title_input" class="col-sm-2 col-form-label">Title</label>
-                        <div class="col-4">
-                            <input type="text" class="form-control" placeholder="Album Title"
-                                   id="album_title_input">
-                        </div>
-                        <label for="album_band_input" class="form-label col-sm-2 col-form-label">Band</label>
-                        <div class="col-4">
-                            <input type="text" class="form-control" placeholder="Band" id="album_band_input">
-                        </div>
-                    </div>
-                    <div class="row pt-3">
-                        <label for="album_band_YOR" class="form-label col-sm-2 col-form-label">Release</label>
-                        <div class="col-4">
-                            <input type="number" id="album_band_YOR" class="form-control" placeholder="Year">
-                        </div>
-                        <label for="album_star_input" class="form-label col-sm-2 col-form-label">Rating</label>
-                        <div class="col-4" id="star-container">
-                            <ul class="list-group list-group-horizontal-sm border border-1 border-secondary form-control bg-dark h-list"
-                                id="album_star_input">
-                                <li class="list-group-item bg-dark border-0 star">
-                                    <i class="bi-star-fill" id="star-1"></i>
-                                </li>
-                                <li class="list-group-item bg-dark border-0 star">
-                                    <i class="bi-star-fill" id="star-2"></i>
-                                </li>
-                                <li class="list-group-item bg-dark border-0 text-warning star">
-                                    <i class="bi-star-fill" id="star-3"></i>
-                                </li>
-                                <li class="list-group-item bg-dark border-0 text-warning star">
-                                    <i class="bi-star-fill" id="star-4"></i>
-                                </li>
-                                <li class="list-group-item bg-dark border-0 text-warning star">
-                                    <i class="bi-star-fill" id="star-5"></i>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="row pt-3">
-                        <label for="album_genre_input" class="col-sm-2 col-form-label display-inline-blk">Genre</label>
-                        <div class="col-4">
-                            <input type="text" list="genres" id="album_genre_input"
-                                   class="form-control display-inline-blk"
-                                   placeholder="Genre">
-                            <datalist id="genres">
-                                <option value="hard rock"></option>
-                                <option value="metal"></option>
-                                <option value="pop"></option>
-                            </datalist>
-                        </div>
-                        <label class="col-sm-2 col-form-label display-inline-blk">Tracks</label>
-                        <div class="col-4">
-                            <span id="track_container" class="overflow-auto">
-                                <button class="btn btn-outline-primary form-control mb-3" id="add_track_btn">Add Track
-                                </button>
-                            </span>
-                        </div>
-                        <div class="btn-container">
-                            <div class="row mb-3">
-                                <div class="col-6">
-                                    <button class="btn btn-outline-primary form-control" id="save_album_btn">Save Album
-                                    </button>
-                                </div>
+            <div class="col">
+                <div class="card h-100 text-bg-dark border-secondary">
+                    <h5 class="card-header border-secondary">Add Album</h5>
+                    <div class="card-body">
+                        <div class="row">
+                            <label for="album_title_input" class="col-sm-2 col-form-label">Title</label>
+                            <div class="col-4">
+                                <input type="text" class="form-control" placeholder="Album Title"
+                                    id="album_title_input">
                             </div>
-                            <div class="row clearfix">
-                                <div class="col-6">
-                                    <button class="btn btn-outline-danger form-control" id="clear_album_input">Clear
+                            <label for="album_band_input" class="form-label col-sm-2 col-form-label">Band</label>
+                            <div class="col-4">
+                                <input type="text" class="form-control" placeholder="Band" id="album_band_input">
+                            </div>
+                        </div>
+                        <div class="row pt-3">
+                            <label for="album_band_YOR" class="form-label col-sm-2 col-form-label">Release</label>
+                            <div class="col-4">
+                                <input type="number" id="album_band_YOR" class="form-control" placeholder="Year">
+                            </div>
+                            <label for="album_star_input" class="form-label col-sm-2 col-form-label">Rating</label>
+                            <div class="col-4" id="star-container">
+                                <ul class="list-group list-group-horizontal-sm border border-1 border-secondary form-control bg-dark h-list"
+                                    id="album_star_input">
+                                    <li class="list-group-item bg-dark border-0 star">
+                                        <i class="bi-star-fill" id="star-1"></i>
+                                    </li>
+                                    <li class="list-group-item bg-dark border-0 star">
+                                        <i class="bi-star-fill" id="star-2"></i>
+                                    </li>
+                                    <li class="list-group-item bg-dark border-0 text-warning star">
+                                        <i class="bi-star-fill" id="star-3"></i>
+                                    </li>
+                                    <li class="list-group-item bg-dark border-0 text-warning star">
+                                        <i class="bi-star-fill" id="star-4"></i>
+                                    </li>
+                                    <li class="list-group-item bg-dark border-0 text-warning star">
+                                        <i class="bi-star-fill" id="star-5"></i>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="row pt-3">
+                            <label for="album_genre_input"
+                                class="col-sm-2 col-form-label display-inline-blk">Genre</label>
+                            <div class="col-4">
+                                <input type="text" list="genres" id="album_genre_input"
+                                    class="form-control display-inline-blk" placeholder="Genre">
+                                <datalist id="genres">
+                                    <option value="hard rock"></option>
+                                    <option value="metal"></option>
+                                    <option value="pop"></option>
+                                </datalist>
+                            </div>
+                            <label class="col-sm-2 col-form-label display-inline-blk">Tracks</label>
+                            <div class="col-4">
+                                <span id="track_container" class="overflow-auto">
+                                    <button class="btn btn-outline-primary form-control mb-3" id="add_track_btn">Add
+                                        Track
                                     </button>
+                                </span>
+                            </div>
+                            <div class="btn-container">
+                                <div class="row mb-3">
+                                    <div class="col-6">
+                                        <button class="btn btn-outline-primary form-control" id="save_album_btn">Save
+                                            Album
+                                        </button>
+                                    </div>
+                                    <div class="col-2">
+                                        <div class="form-label">Stock</div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="input-group">
+                                            <span class="input-group-text text-bg-dark">Vinyl</span>
+                                            <input type="number" id="vinyl_ammount" min="0" class="form-control">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row clearfix">
+                                    <div class="col-6">
+                                        <button class="btn btn-outline-danger form-control" id="clear_album_input">Clear
+                                        </button>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="input-group">
+                                            <span class="input-group-text text-bg-dark">CD</span>
+                                            <input type="number" id="cd_ammount" min="0" class="form-control">
+                                            <span class="input-group-text text-bg-dark">Tape</span>
+                                            <input type="number" id="tape_ammount" min="0" class="form-control">
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -113,7 +135,7 @@
             </div>
         </div>
     </div>
-</div>
 </body>
 <script src="app.js"></script>
+
 </html>
