track container scrollable

--- a/web/main.html
+++ b/web/main.html
@@ -91,10 +91,10 @@
                             </div>
                             <label class="col-sm-2 col-form-label display-inline-blk">Tracks</label>
                             <div class="col-4">
-                                <span id="track_container" class="overflow-auto">
-                                    <button class="btn btn-outline-primary form-control mb-3" id="add_track_btn">Add
-                                        Track
-                                    </button>
+                                <button class="btn btn-outline-primary form-control mb-3" id="add_track_btn">Add
+                                    Track
+                                </button>
+                                <span id="track_container">
                                 </span>
                             </div>
                             <div class="btn-container">
