--- a/web/main.html
+++ b/web/main.html
@@ -94,7 +94,8 @@
                                 <button class="btn btn-outline-primary form-control mb-3" id="add_track_btn">Add
                                     Track
                                 </button>
-                                <span id="track_container">
+                                <span class="container-of-track-container-sigh">
+                                    <span id="track_container"></span>
                                 </span>
                             </div>
                             <div class="btn-container">
