improved track list

--- a/web/main.html
+++ b/web/main.html
@@ -94,6 +94,9 @@
                                 <button class="btn btn-outline-primary form-control mb-3" id="add_track_btn">Add
                                     Track
                                 </button>
+                            </div>
+                            <div class="col-6"></div>
+                            <div class="col-6">
                                 <span class="container-of-track-container-sigh">
                                     <span id="track_container"></span>
                                 </span>
