--- a/web/main.html
+++ b/web/main.html
@@ -27,9 +27,34 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="overflow-auto card-text-container">
-                                <div id="placeholder" class="text-start pt-3"></div>
+                        <div class="album-search-template">
+                            <div class="row mt-4 text-secondary text-start">
+                                <div class="col album-search-title">
+                                    <span class="album-search-title">Title</span>
+                                    <span class="album-search-year">(Year)<span>
+                                </div>
+                            </div>
+                            <div class="row m-0 text-secondary text-start">
+                                <div class="col-1 m-0 p-0">
+                                    <h5 class="m-0 album-search-band">Band</h5>
+                                </div>
+                                <div class="col-2 m-0 p-0">
+                                    <h5 class="m-0 album-search-genre">(Genre)</h5>
+                                </div>
+                            </div>
+                            <div class="row m-2 text-secondary text-start album-search-song-list">
+                                <p class="album-search-song">1. Song</p>
+                                <p class="album-search-song">2. Song</p>
+                                <p class="album-search-song">3. Song</p>
+                            </div>
+                            <div class="row m-0 p-0 text-secondary text-start">
+                                <h4 class="p-0">Stock and Personal Rating</h4>
+                                <ul class="mb-2">
+                                    <li>CD: 0</li>
+                                    <li>Vinyl: 0</li>
+                                    <li>Cassette Tape: 0</li>
+                                </ul>
+                                <h5 class="p-0 album-search-rating">Rated 5 stars</h5>
                             </div>
                         </div>
                     </div>
